@@ -1,6 +1,6 @@
 package ch.ethz.origo.jerpa.application.perspective.ededb.actions;
 
-import ch.ethz.origo.jerpa.application.perspective.ededb.logic.Controller;
+import ch.ethz.origo.jerpa.application.perspective.ededb.logic.EDEDBController;
 
 import javax.swing.*;
 import java.awt.event.ActionEvent;
@@ -12,9 +12,9 @@ import java.awt.event.ActionEvent;
  */
 public class ActionConnect extends AbstractAction {
 
-    private Controller controller;
+    private EDEDBController controller;
 
-    public ActionConnect(Controller controller) {
+    public ActionConnect(EDEDBController controller) {
         this.controller = controller;
     }
 
