@@ -1,7 +1,7 @@
 package ch.ethz.origo.jerpa.application.perspective.ededb.actions;
 
 import ch.ethz.origo.jerpa.ededclient.sources.EDEDSession;
-import ch.ethz.origo.jerpa.application.perspective.ededb.logic.Controller;
+import ch.ethz.origo.jerpa.application.perspective.ededb.logic.EDEDBController;
 
 import javax.swing.*;
 import java.awt.event.ActionEvent;
@@ -13,14 +13,14 @@ import java.awt.event.ActionEvent;
  */
 public class ActionDisconnect extends AbstractAction {
 
-    private Controller controller;
+    private EDEDBController controller;
 
     /**
      * Constructor.
      *
-     * @param controller EDEDB Controller
+     * @param controller EDEDB EDEDBController
      */
-    public ActionDisconnect(Controller controller) {
+    public ActionDisconnect(EDEDBController controller) {
         this.controller = controller;
     }
 
